# VideoEditor

./: CMakeLists.txt  README.md
data/shaders/: fragSource.frag  vertexSource.vert
include/: constants.hpp  display.hpp  file_manager.hpp  idr_editor.hpp  renderer.hpp  shader_class.hpp  texture.hpp  video_player.hpp  video_renderer.hpp  video_timeline.hpp
include/glad/: glad.h
src/: display.cpp  file_manager.cpp  glad.c  idr_editor.cpp  main.cpp  shader_class.cpp  texture.cpp  video_player.cpp  video_renderer.cpp
